Fix login Errors
